--- a/package.json
+++ b/package.json
@@ -15,5 +15,23 @@
   "bugs": {
     "url": "https://github.com/grantbelcher/movieList/issues"
   },
-  "homepage": "https://github.com/grantbelcher/movieList#readme"
+  "homepage": "https://github.com/grantbelcher/movieList#readme",
+  "dependencies": {
+    "express": "^4.17.1",
+    "mongoose": "^5.9.11",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.11"
+  },
+  "devDependencies": {
+    "babel-eslint": "^10.1.0",
+    "babel-jest": "^25.5.1",
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb": "^18.1.0",
+    "eslint-plugin-react": "^7.19.0",
+    "eslint-plugin-react-hooks": "^4.0.0",
+    "jest": "^25.5.4",
+    "react-test-renderer": "^16.13.1"
+  }
 }
