--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "babel-jest": "^25.5.1",
     "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.1.0",
+    "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.19.0",
     "eslint-plugin-react-hooks": "^4.0.0",
     "jest": "^25.5.4",
