--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest",
+    "dev-bundle": "webpack -w"
   },
   "repository": {
     "type": "git",
@@ -17,6 +18,7 @@
   },
   "homepage": "https://github.com/grantbelcher/movieList#readme",
   "dependencies": {
+    "babel-loader": "^8.1.0",
     "express": "^4.17.1",
     "mongoose": "^5.9.11",
     "react": "^16.13.1",
@@ -25,6 +27,8 @@
     "webpack-cli": "^3.3.11"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.9.6",
+    "@babel/preset-react": "^7.9.4",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^25.5.1",
     "eslint": "^6.8.0",
@@ -34,6 +38,7 @@
     "eslint-plugin-react": "^7.19.0",
     "eslint-plugin-react-hooks": "^4.0.0",
     "jest": "^25.5.4",
+    "nodemon": "^2.0.3",
     "react-test-renderer": "^16.13.1"
   }
 }
