--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "jest",
-    "dev-bundle": "webpack -w"
+    "dev-bundle": "webpack -w",
+    "start-dev": "nodemon ./server/index.js"
   },
   "repository": {
     "type": "git",
