--- a/package.json
+++ b/package.json
@@ -22,8 +22,11 @@
     "babel-loader": "^8.1.0",
     "express": "^4.17.1",
     "mongoose": "^5.9.11",
+    "ngrok": "^3.2.7",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "socket.io": "^2.3.0",
+    "socket.io-client": "^2.3.0",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11"
   },
