--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/grantbelcher/movieList#readme",
   "dependencies": {
     "babel-loader": "^8.1.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "mongoose": "^5.9.11",
     "ngrok": "^3.2.7",
