--- a/package.json
+++ b/package.json
@@ -20,8 +20,11 @@
   "homepage": "https://github.com/grantbelcher/movieList#readme",
   "dependencies": {
     "babel-loader": "^8.1.0",
+    "bcrypt": "^4.0.1",
+    "config": "^3.3.1",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.11",
     "ngrok": "^3.2.7",
     "react": "^16.13.1",
