--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/grantbelcher/movieList#readme",
   "dependencies": {
+    "@material-ui/core": "^4.10.0",
     "babel-loader": "^8.1.0",
     "bcrypt": "^4.0.1",
     "config": "^3.3.1",
@@ -30,6 +31,10 @@
     "ngrok": "^3.2.7",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-redux": "^7.2.0",
+    "react-router-dom": "^5.2.0",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
     "socket.io": "^2.3.0",
     "socket.io-client": "^2.3.0",
     "webpack": "^4.43.0",
