--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/grantbelcher/movieList#readme",
   "dependencies": {
     "@material-ui/core": "^4.10.0",
+    "axios": "^0.19.2",
     "babel-loader": "^8.1.0",
     "bcrypt": "^4.0.1",
     "config": "^3.3.1",
@@ -41,6 +42,7 @@
     "webpack-cli": "^3.3.11"
   },
   "devDependencies": {
+    "@babel/polyfill": "^7.8.7",
     "@babel/preset-env": "^7.9.6",
     "@babel/preset-react": "^7.9.4",
     "babel-eslint": "^10.1.0",
