--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "homepage": "https://github.com/grantbelcher/movieList#readme",
   "dependencies": {
     "@material-ui/core": "^4.10.0",
+    "@material-ui/lab": "^4.0.0-alpha.55",
     "axios": "^0.19.2",
     "babel-loader": "^8.1.0",
     "bcrypt": "^4.0.1",
