--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@material-ui/core": "^4.10.0",
     "@material-ui/lab": "^4.0.0-alpha.55",
+    "@material-ui/styles": "^4.10.0",
     "axios": "^0.19.2",
     "babel-loader": "^8.1.0",
     "bcrypt": "^4.0.1",
