--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "jest",
     "bundle": "webpack -w",
+    "start": "node ./server/index.js",
     "start-dev": "nodemon ./server/index.js",
     "seed": "node ./db/seed.js"
   },
