--- a/package.json
+++ b/package.json
@@ -23,17 +23,14 @@
     "axios": "^0.19.2",
     "babel-loader": "^8.1.0",
     "bcrypt": "^4.0.1",
-    "config": "^3.3.1",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-validator": "^6.5.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.9.11",
-    "ngrok": "^3.2.7",
+    "mysql": "^2.18.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
-    "react-router-dom": "^5.2.0",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0",
