--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "jest",
     "dev-bundle": "webpack -w",
-    "start-dev": "nodemon ./server/index.js"
+    "start-dev": "nodemon ./server/index.js",
+    "seed": "node './newDb/seed.js"
   },
   "repository": {
     "type": "git",
@@ -23,6 +24,7 @@
     "axios": "^0.19.2",
     "babel-loader": "^8.1.0",
     "bcrypt": "^4.0.1",
+    "bluebird": "^3.7.2",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-validator": "^6.5.0",
