--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "jest",
     "dev-bundle": "webpack -w",
     "start-dev": "nodemon ./server/index.js",
-    "seed": "node ./newDb/seed.js"
+    "seed": "node ./db/seed.js"
   },
   "repository": {
     "type": "git",
